Update fdroid repo on builds that are not dev builds